🚀 Prepare for heroku deployment

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js",
+    "run": "nodemon index.js"
   },
   "author": "",
   "type": "module",
@@ -24,5 +25,8 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
