--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "run": "nodemon index.js"
+    "run": "nodemon index.js",
+    "mongo": "mongod --port 27017 --dbpath F:/dev/mongodb"
   },
   "author": "",
   "type": "module",
@@ -13,6 +14,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "connect-ensure-login": "^0.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
