--- a/.env-template
+++ b/.env-template
@@ -7,4 +7,12 @@ FACEBOOK_CLIENT_ID=xxx
 FACEBOOK_CLIENT_SECRET=xxx
 
 GITHUB_CLIENT_ID=xxx
-GITHUB_CLIENT_SECRET=xxx
+GITHUB_CLIENT_SECRET=xxx 
+
+DATABASE_URL=xxx
+DATABASE_URL_LOCAL=xxx
+WEBSITE_URL=xxx
+WEBSITE_URL_ORIGIN=xxx
+
+SSL=xxx
+PORT=xxx
