--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "googleapis": "^39.2.0",
+    "http": "0.0.1-security",
+    "https": "^1.0.0",
     "mongoose": "^5.10.13",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
