--- a/.env-template
+++ b/.env-template
@@ -14,5 +14,9 @@ DATABASE_URL_LOCAL=xxx
 WEBSITE_URL=xxx
 WEBSITE_URL_ORIGIN=xxx
 
+MAIL_USER=xxx
+MAIL_PASSWORD=xxx
+MAIL_SERVICE=xxx
+
 SSL=xxx
 PORT=xxx
