--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "http": "0.0.1-security",
     "https": "^1.0.0",
     "mongoose": "^5.10.13",
+    "nodemailer": "^6.4.16",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-github2": "^0.1.12",
